feat(compat): implement ACRCloud compatible endpoint
