# acr/operations/compat/get_custom_stream_responses.go
@@ -1,0 +1,109 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package compat
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/radiorabe/acr-webhook-receiver/models"
+)
+
+// GetCustomStreamOKCode is the HTTP code returned for type GetCustomStreamOK
+const GetCustomStreamOKCode int = 200
+
+/*GetCustomStreamOK Results without local ID
+
+swagger:response getCustomStreamOK
+*/
+type GetCustomStreamOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload []*models.Webhook `json:"body,omitempty"`
+}
+
+// NewGetCustomStreamOK creates GetCustomStreamOK with default headers values
+func NewGetCustomStreamOK() *GetCustomStreamOK {
+
+	return &GetCustomStreamOK{}
+}
+
+// WithPayload adds the payload to the get custom stream o k response
+func (o *GetCustomStreamOK) WithPayload(payload []*models.Webhook) *GetCustomStreamOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get custom stream o k response
+func (o *GetCustomStreamOK) SetPayload(payload []*models.Webhook) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetCustomStreamOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if payload == nil {
+		// return empty array
+		payload = make([]*models.Webhook, 0, 50)
+	}
+
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
+
+// GetCustomStreamBadRequestCode is the HTTP code returned for type GetCustomStreamBadRequest
+const GetCustomStreamBadRequestCode int = 400
+
+/*GetCustomStreamBadRequest Bad Request
+
+swagger:response getCustomStreamBadRequest
+*/
+type GetCustomStreamBadRequest struct {
+}
+
+// NewGetCustomStreamBadRequest creates GetCustomStreamBadRequest with default headers values
+func NewGetCustomStreamBadRequest() *GetCustomStreamBadRequest {
+
+	return &GetCustomStreamBadRequest{}
+}
+
+// WriteResponse to the client
+func (o *GetCustomStreamBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(400)
+}
+
+// GetCustomStreamInternalServerErrorCode is the HTTP code returned for type GetCustomStreamInternalServerError
+const GetCustomStreamInternalServerErrorCode int = 500
+
+/*GetCustomStreamInternalServerError Server Error
+
+swagger:response getCustomStreamInternalServerError
+*/
+type GetCustomStreamInternalServerError struct {
+}
+
+// NewGetCustomStreamInternalServerError creates GetCustomStreamInternalServerError with default headers values
+func NewGetCustomStreamInternalServerError() *GetCustomStreamInternalServerError {
+
+	return &GetCustomStreamInternalServerError{}
+}
+
+// WriteResponse to the client
+func (o *GetCustomStreamInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(500)
+}
